# Ejex

./: .dir-locals.el  Makefile.am  README  autogen.sh  configure.ac
data/: Makefile.am
src/: Makefile.am  ejex-application-window.c  ejex-application-window.h  ejex-application.c  ejex-application.h  ejex-discover.c  ejex-discover.h  ejex-main.c
